# giphy-app

./: README.md  pyproject.toml
src/: app.py
tests/: test_giphy_app.py
